--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: sudo mk/linux/setupBuildDeps.sh
+      run: |
+        sudo apt update
+        sudo mk/linux/setupBuildDeps.sh
     
     - name: Bulid MegaGlest With GCC Compiler
       if: ${{ matrix.compiler == 'gcc' }}
