More fixes to cmake builds
- Add icons to windows exes.
- Revert removal of CurlGetConfig.cmake. This is still required in
ubuntu. (Perhaps only for static builds.)

--- a/source/g3d_viewer/CMakeLists.txt
+++ b/source/g3d_viewer/CMakeLists.txt
@@ -207,6 +207,11 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER)
 
 	ADD_EXECUTABLE(${TARGET_NAME} ${MG_SOURCE_FILES} ${MG_INCLUDE_FILES})
 
+	IF(WIN32)
+	# Must come after ADD_EXECUTABLE.
+		TARGET_SOURCES(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/mk/windoze/g3d_viewer.rc)
+	ENDIF()
+
 	IF(WANT_USE_STREFLOP AND NOT STREFLOP_FOUND)
 		TARGET_LINK_LIBRARIES(${TARGET_NAME} streflop)
 	ENDIF()
