--- a/source/glest_map_editor/CMakeLists.txt
+++ b/source/glest_map_editor/CMakeLists.txt
@@ -194,6 +194,11 @@ IF(BUILD_MEGAGLEST_MAP_EDITOR)
 		ADD_EXECUTABLE(${TARGET_NAME} ${MG_SOURCE_FILES} ${MG_INCLUDE_FILES})
 	ENDIF()
 	
+	IF(WIN32)
+		# Must come after ADD_EXECUTABLE.
+		TARGET_SOURCES(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/mk/windoze/glest_editor.rc)
+	ENDIF()
+
 	SET(MG_STREFLOP "")
 	IF(WANT_USE_STREFLOP)
 		SET(MG_STREFLOP "streflop")
