--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -92,6 +92,7 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 
 	FIND_PACKAGE(CURL REQUIRED)
+	INCLUDE(${CMAKE_SOURCE_DIR}/mk/cmake/Modules/CurlGetConfig.cmake)
 	INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
 	IF(UNIX)
 		IF(NOT OPENSSL_FOUND)
@@ -296,6 +297,7 @@ IF(BUILD_MEGAGLEST)
 	endif()
 
 	IF(WIN32)
+		TARGET_SOURCES(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/mk/windoze/glest.rc)
 		IF(VCPKG_TARGET_TRIPLET)
 			TARGET_LINK_LIBRARIES(${TARGET_NAME} odbc32 wsock32 winspool winmm shell32 comctl32 advapi32 opengl32 glu32 ole32 oleaut32 uuid ddraw dsound dxguid ws2_32 iphlpapi gdi32 user32 kernel32 dbghelp shlwapi)
 			find_package(Ogg CONFIG REQUIRED)
