Add macos workflow
Macos workflow does not work atm, so it's commented out. But this shows
the general idea of how it should work.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -139,6 +139,31 @@ jobs:
           mk/windoze/*.ini
           !mk/windoze/glest-dev.ini
 
+  # build-macos:
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       arch: [x64]
+  #       os: [macos-latest]
+  #       compiler: [clang]
+  #   runs-on: ${{ matrix.os }}
+
+  #   steps:
+  #   - uses: actions/checkout@v2
+
+  #   - name: Get dependencies
+  #     run: |
+  #       brew install pkg-config cmake sdl2 lua jpeg libpng freetype ftgl libogg glew libvorbis cppunit fribidi miniupnpc curl wxmac xquartz zstd xml2 openldap
+    
+  #   - name: Bulid MegaGlest With Clang Compiler
+  #     if: ${{ matrix.compiler == 'clang' }}
+  #     env:
+  #       CC: clang
+  #       CXX: clang++
+  #     run: |
+  #       # Path hack to get curl working.
+  #       export PATH=/usr/local/Cellar/curl/7.77.0/bin:$PATH
+  #       mk/macos/build-mg.sh
    # - name: Test
    #   working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
