--- a/mk/shared/glestkeys.ini
+++ b/mk/shared/glestkeys.ini
@@ -3,8 +3,8 @@
 RenderInGamePerformance=`
 RenderNetworkStatus=N
 ShowFullConsole=M
-Screenshot=E
-FreeCameraMode=F
+Screenshot=J
+FreeCameraMode=Y
 ResetCameraMode=space
 CameraModeLeft=left
 CameraModeRight=right
@@ -26,20 +26,30 @@ GroupUnitsKey7='6'
 GroupUnitsKey8='7'
 GroupUnitsKey9='8'
 GroupUnitsKey10='9'
-CameraRotateLeft=A
-CameraRotateRight=D
+CameraRotateLeft=O
+CameraRotateRight=P
 CameraRotateUp=S
 CameraRotateDown=W
+HotKeyBuild1=Q
+HotKeyBuild2=W
+HotKeyBuild3=E
+HotKeyBuild4=R
+HotKeyBuild5=A
+HotKeyBuild6=S
+HotKeyBuild7=D
+HotKeyBuild8=F
+HotKeyBuild9=Z
+HotKeyBuild10=X
 HotKeyCenterCameraOnSelection=G
 HotKeySelectIdleHarvesterUnit=I
 HotKeySelectBuiltBuilding=B
 HotKeyShowDebug=?
 HotKeyDumpWorldToLog=\
 HotKeyRotateUnitDuringPlacement=R
-HotKeySelectDamagedUnit=D
+HotKeySelectDamagedUnit=U
 HotKeySelectStoreUnit=T
-HotKeySelectedUnitsAttack=A
-HotKeySelectedUnitsStop=S
+HotKeySelectedUnitsAttack=I
+HotKeySelectedUnitsStop=;
 HotKeyToggleOSMouseEnabled=/
 ChatTeamMode=H
 ToggleHealthbars=#
