--- a/mk/shared/glestkeys.ini
+++ b/mk/shared/glestkeys.ini
@@ -30,16 +30,16 @@ CameraRotateLeft=O
 CameraRotateRight=P
 CameraRotateUp=S
 CameraRotateDown=W
-HotKeyBuild1=Q
-HotKeyBuild2=W
-HotKeyBuild3=E
-HotKeyBuild4=R
-HotKeyBuild5=A
-HotKeyBuild6=S
-HotKeyBuild7=D
-HotKeyBuild8=F
-HotKeyBuild9=Z
-HotKeyBuild10=X
+CommandKey1=Q
+CommandKey2=W
+CommandKey3=E
+CommandKey4=R
+CommandKey5=A
+CommandKey6=S
+CommandKey7=D
+CommandKey8=F
+CommandKey9=Z
+CommandKey10=X
 HotKeyCenterCameraOnSelection=G
 HotKeySelectIdleHarvesterUnit=I
 HotKeySelectBuiltBuilding=B
