Remove key conflics Move back the camera hotkeys to a and d, this means that the equivalent command hotkeys won't be usable in free camera mode

--- a/mk/shared/glestkeys.ini
+++ b/mk/shared/glestkeys.ini
@@ -26,8 +26,8 @@ GroupUnitsKey7='6'
 GroupUnitsKey8='7'
 GroupUnitsKey9='8'
 GroupUnitsKey10='9'
-CameraRotateLeft=O
-CameraRotateRight=P
+CameraRotateLeft=A
+CameraRotateRight=D
 CameraRotateUp=S
 CameraRotateDown=W
 CommandKey1=Q
@@ -48,7 +48,7 @@ HotKeyDumpWorldToLog=\
 HotKeyRotateUnitDuringPlacement=R
 HotKeySelectDamagedUnit=U
 HotKeySelectStoreUnit=T
-HotKeySelectedUnitsAttack=I
+HotKeySelectedUnitsAttack=V
 HotKeySelectedUnitsStop=;
 HotKeyToggleOSMouseEnabled=/
 ChatTeamMode=H
