--- a/mk/shared/glestkeys.ini
+++ b/mk/shared/glestkeys.ini
@@ -11,7 +11,7 @@ CameraModeRight=right
 CameraModeUp=up
 CameraModeDown=down
 PauseGame=P
-ChangeFontColor=C
+ChangeFontColor=O
 GameSpeedIncrease='+'
 GameSpeedDecrease='-'
 ExitKey=escape
@@ -40,6 +40,8 @@ CommandKey7=D
 CommandKey8=F
 CommandKey9=Z
 CommandKey10=X
+CommandKey11=C
+CommandKey12=V
 HotKeyCenterCameraOnSelection=G
 HotKeySelectIdleHarvesterUnit=I
 HotKeySelectBuiltBuilding=B
@@ -48,7 +50,7 @@ HotKeyDumpWorldToLog=\
 HotKeyRotateUnitDuringPlacement=R
 HotKeySelectDamagedUnit=U
 HotKeySelectStoreUnit=T
-HotKeySelectedUnitsAttack=V
+HotKeySelectedUnitsAttack=,
 HotKeySelectedUnitsStop=;
 HotKeyToggleOSMouseEnabled=/
 ChatTeamMode=H
