Add camera location hotkeys

--- a/mk/shared/glestkeys.ini
+++ b/mk/shared/glestkeys.ini
@@ -26,6 +26,10 @@ GroupUnitsKey7='6'
 GroupUnitsKey8='7'
 GroupUnitsKey9='8'
 GroupUnitsKey10='9'
+CameraLocationKey1=f1
+CameraLocationKey2=f2
+CameraLocationKey3=f3
+CameraLocationKey4=f4
 CameraRotateLeft=A
 CameraRotateRight=D
 CameraRotateUp=S
@@ -47,11 +51,11 @@ ToggleMusic=K
 SaveGUILayout=f10
 SetMarker=X
 ReloadINI=f5
-TogglePhotoMode=f8
+TogglePhotoMode=f6
 SwitchLanguage=L
 SaveGame=f11
-BookmarkAdd=f2
-BookmarkRemove=f3
-CameraFollowSelectedUnit=f4
+BookmarkAdd=f7
+BookmarkRemove=f8
+CameraFollowSelectedUnit=f9
 ; === propertyMap File === 
 
