--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -68,7 +68,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/curl-7.21.3/include)
 		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/${SDL_WINDOWS_DIR_DINC}/include)
 		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/include)
-				       
+
 		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/lib)
 		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib)
 		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib)
@@ -79,9 +79,10 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	ENDIF()
 
 	IF(WANT_USE_OpenSSL)
-		FIND_PACKAGE(OpenSSL)
+		FIND_PACKAGE(OPENSSL REQUIRED) # required for curl
 		IF(OPENSSL_FOUND)
 		    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
+		    SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${OPENSSL_LIBRARIES})
 		ELSE()
 		    MESSAGE(STATUS "**NOTE: OpenSSL is usually not required.")
 		ENDIF()
@@ -94,9 +95,6 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		IF(NOT OPENSSL_FOUND)
 		    # default
 		    SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${CURL_LIBRARIES})
-		ELSE()
-		    # mageia
-		    SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
 		ENDIF()
 	ENDIF()
 
@@ -158,7 +156,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	            SET(HAVE_FONTCONFIG 1)
                     ADD_DEFINITIONS(-DHAVE_FONTCONFIG)
 
-	            INCLUDE_DIRECTORIES( ${FONTCONFIG_INCLUDE_DIR} ) 
+	            INCLUDE_DIRECTORIES( ${FONTCONFIG_INCLUDE_DIR} )
 	            SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${FONTCONFIG_LIBRARIES} )
 	        ENDIF(FONTCONFIG_FOUND)
         ENDIF()
@@ -262,12 +260,12 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 
 	SET(DIRS_WITH_SRC
         compression
-		feathery_ftp	
+		feathery_ftp
 		glew
 		graphics
 		graphics/gl
 		lua
-		map	
+		map
 		platform/common
 		sound
 		sound/openal
@@ -281,7 +279,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 			streflop/libm_flt32_source
             streflop/softfloat)
 	ENDIF()
-	
+
 	IF(FORCE_EMBEDDED_LIBS)
 		SET(FORCE_USE_EMBEDDED_Miniupnpc ON)
 	ELSE()
@@ -346,7 +344,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(DIRS_WITH_SRC ${DIRS_WITH_SRC} platform/posix)
 		SET(DIRS_WITH_SRC ${DIRS_WITH_SRC} platform/unix)
 	ENDIF()
-	
+
 	SET(MG_INCLUDES_ROOT "include/")
 	SET(MG_SOURCES_ROOT "sources/")
 	SET(MG_INCLUDE_FILES "")
@@ -427,7 +425,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/shared_lib/sources/platform/${SDL_VERSION_SNAME}/window_gl.cpp)
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/win32_deps/src/glprocs.c)
 	ENDIF()
-	
+
 	FOREACH(DIR IN LISTS DIRS_WITH_SRC)
 		set(INCLUDE_DIR_TO_GLOB ${MG_INCLUDES_ROOT}${DIR})
 		INCLUDE_DIRECTORIES( ${INCLUDE_DIR_TO_GLOB} )
@@ -443,7 +441,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		FILE(GLOB SRC_FILES_FROM_THIS_DIR ${SRC_DIR_TO_GLOB}/*.cpp)
 		#MESSAGE(STATUS "SRC_FILES_FROM_THIS_DIR: ${SRC_FILES_FROM_THIS_DIR}")
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${SRC_FILES_FROM_THIS_DIR})
-	
+
 		set(SRC_DIR_TO_GLOB ${MG_SOURCES_ROOT}${DIR})
 		#MESSAGE(STATUS "SRC_DIR_TO_GLOB: ${SRC_DIR_TO_GLOB}")
 		FILE(GLOB SRC_FILES_FROM_THIS_DIR ${SRC_DIR_TO_GLOB}/*.c)
@@ -456,7 +454,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 			SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${SRC_FILES_FROM_THIS_DIR})
 			FILE(GLOB SRC_FILES_FROM_THIS_DIR ${SRC_DIR_TO_GLOB}/*.m)
 			#MESSAGE(STATUS "SRC_FILES_FROM_THIS_DIR: ${SRC_FILES_FROM_THIS_DIR}")
-			SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${SRC_FILES_FROM_THIS_DIR})	
+			SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${SRC_FILES_FROM_THIS_DIR})
 		ENDIF(APPLE)
 	ENDFOREACH(DIR)
 
@@ -472,9 +470,9 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(PLATFORM_SPECIFIC_DEFINES "-DX11_AVAILABLE -DHAVE_SYS_IOCTL_H")
 	ENDIF()
 
-	SET_SOURCE_FILES_PROPERTIES(${MG_SOURCE_FILES} PROPERTIES COMPILE_FLAGS 
+	SET_SOURCE_FILES_PROPERTIES(${MG_SOURCE_FILES} PROPERTIES COMPILE_FLAGS
 		"${PLATFORM_SPECIFIC_DEFINES} ${STREFLOP_PROPERTIES} ${CXXFLAGS}")
-	
+
 	SET_SOURCE_FILES_PROPERTIES(${MG_INCLUDE_FILES} PROPERTIES HEADER_FILE_ONLY 1)
 
 	IF(NOT WIN32)
