--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,8 +23,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get dependencies
-      run: sudo mk/linux/setupBuildDeps.sh
-
+      run:  |
+        sudo apt-get update && sudo apt-get -y upgrade
+        sudo mk/linux/setupBuildDeps.sh
 
     - name: Build MegaGlest With GCC Compiler
       if: ${{ matrix.compiler == 'gcc' }}
