for OpenSSL, use include instead of find_package

--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -83,7 +83,7 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 
 	IF(WANT_USE_OpenSSL)
-		FIND_PACKAGE(OpenSSL)
+		include(FindOpenSSL)
 		IF(OPENSSL_FOUND)
 		    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 		ELSE()
