--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -79,7 +79,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	ENDIF()
 
 	IF(WANT_USE_OpenSSL)
-		FIND_PACKAGE(OPENSSL REQUIRED) # required for curl
+		include(FindOpenSSL)
 		IF(OPENSSL_FOUND)
 		    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 		    SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${OPENSSL_LIBRARIES})
