--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
         sudo apt-get update && sudo apt-get -y upgrade
         sudo mk/linux/setupBuildDeps.sh
 
-    - name: Build MegaGlest With GCC Compiler
+    - name: Build
 
       run:  |
         if [ "${MATRIX_COMPILER}" = "gcc" ]; then
@@ -59,7 +59,7 @@ jobs:
         sudo apt-get update && sudo apt-get -y upgrade
         sudo apt-get install -y $CC $CXX
         sudo mk/linux/setupBuildDeps.sh
-    - name: Build MegaGlest With GCC Compiler
+    - name: Build
       run: mk/linux/build-mg.sh
 
     - name: Prepare Snapshot
