--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,7 +37,7 @@ jobs:
           eval "CC=clang && CXX=clang++"
         fi
         mk/linux/build-mg.sh -m
-        make -C build -j$(nproc) VERBOSE=1
+        make -C mk/linux/build -j$(nproc) VERBOSE=1
 
   build-latest-gcc:
     strategy:
