--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,12 +31,10 @@ jobs:
     - name: Build
 
       run:  |
-        if [ "${MATRIX_COMPILER}" = "gcc" ]; then
-          eval "CC=gcc && CXX=g++"
-        else
-          eval "CC=clang && CXX=clang++"
+        if [ "${MATRIX_COMPILER}" = "clang" ]; then
+          EXTRA_OPTS="-f"
         fi
-        mk/linux/build-mg.sh -m
+        mk/linux/build-mg.sh -m ${EXTRA_OPTS}
         make -C mk/linux/build -j$(nproc) VERBOSE=1
 
   build-latest-gcc:
@@ -165,34 +163,3 @@ jobs:
           mk/windoze/*.exe
           mk/windoze/*.ini
           !mk/windoze/glest-dev.ini
-
-  # build-macos:
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       arch: [x64]
-  #       os: [macos-latest]
-  #       compiler: [clang]
-  #   runs-on: ${{ matrix.os }}
-
-  #   steps:
-  #   - uses: actions/checkout@v2
-
-  #   - name: Get dependencies
-  #     run: |
-  #       brew install pkg-config cmake sdl2 lua jpeg libpng freetype ftgl libogg glew libvorbis cppunit fribidi miniupnpc curl wxmac xquartz zstd xml2 openldap
-
-  #   - name: Bulid MegaGlest With Clang Compiler
-  #     if: ${{ matrix.compiler == 'clang' }}
-  #     env:
-  #       CC: clang
-  #       CXX: clang++
-  #     run: |
-  #       # Path hack to get curl working.
-  #       export PATH=/usr/local/Cellar/curl/7.77.0/bin:$PATH
-  #       mk/macos/build-mg.sh
-   # - name: Test
-   #   working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-   #   run: ctest -C ${{env.BUILD_TYPE}}
