--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [x64]
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04]
         compiler: [gcc, clang]
     runs-on: ${{ matrix.os }}
     env:
@@ -24,18 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Get dependencies
-      run:  |
-        sudo apt-get update && sudo apt-get -y upgrade
-        sudo apt-get install $APT_OPTIONS build-essential cmake  \
-          libcurl4-gnutls-dev libsdl2-dev libopenal-dev liblua5.3-dev \
-          libjpeg-dev libpng-dev libfreetype6-dev libwxgtk3.0-gtk3-dev  \
-          libcppunit-dev libfribidi-dev libftgl-dev libglew-dev \
-          libogg-dev libvorbis-dev libminiupnpc-dev libircclient-dev  \
-          libxml2-dev libx11-dev  \
-          libgl1-mesa-dev libglu1-mesa-dev librtmp-dev libkrb5-dev  \
-          libldap2-dev libidn2-dev libpsl-dev libgnutls28-dev \
-          libnghttp2-dev libssh-dev libbrotli-dev \
-
+      run: sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
         if [ "${MATRIX_COMPILER}" = "clang" ]; then
@@ -60,7 +49,7 @@ jobs:
           mk/linux/*.ini
           !mk/linux/glest-dev.ini
 
-  jammy-build:
+  build-linux-other:
     strategy:
       fail-fast: false
       matrix:
@@ -72,18 +61,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Get dependencies
-      run:  |
-        sudo apt-get update && sudo apt-get -y upgrade
-        sudo apt-get install -y $CC $CXX
-        sudo apt-get install $APT_OPTIONS build-essential cmake  \
-          libcurl4-gnutls-dev libsdl2-dev libopenal-dev liblua5.3-dev \
-          libjpeg-dev libpng-dev libfreetype6-dev libwxgtk3.0-gtk3-dev  \
-          libcppunit-dev libfribidi-dev libftgl-dev libglew-dev \
-          libogg-dev libvorbis-dev libminiupnpc-dev libircclient-dev  \
-          libxml2-dev libx11-dev  \
-          libgl1-mesa-dev libglu1-mesa-dev librtmp-dev libkrb5-dev  \
-          libldap2-dev libidn2-dev libpsl-dev libgnutls28-dev \
-          libnghttp2-dev libssh-dev libbrotli-dev \
+      run: sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
         mk/linux/build-mg.sh -d -m
