--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Get dependencies
-      run: sudo mk/linux/setupBuildDeps.sh
+      run: |
+        sudo apt-get update && sudo apt-get upgrade
+        sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
         if [ "${MATRIX_COMPILER}" = "clang" ]; then
@@ -61,7 +63,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Get dependencies
-      run: sudo mk/linux/setupBuildDeps.sh
+      run: |
+        sudo apt-get update && sudo apt-get upgrade
+        sudo apt-get install -y $CXX
+        sudo mk/linux/setupBuildDeps.sh
     - name: Build
       run:  |
         mk/linux/build-mg.sh -d -m
